--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a simple project testing your typing speed",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "httpster -p 3000"
   },
   "repository": {
     "type": "git",
